--- a/app/middleware/mailer-templates/includes/footer.ejs
+++ b/app/middleware/mailer-templates/includes/footer.ejs
@@ -1,20 +1,26 @@
-<style>
-  footer {
-    display: flex;
-    justify-content: center;
-    justify-items: center;
-    margin: auto;
-    font-size: 14px;
-  }
-</style>
 
-<footer>
-  <div>
-    <p>This email is automatically sent to you</p>
-    <p>© 2022 Flypass. All Rights Reserved</p>
-  </div>
-</footer>
+            <!-- START FOOTER -->
+            <div class="footer">
+              <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+                <tr>
+                  <td class="content-block">
+                    <span class="apple-link">Company Inc, 3 Abbey Road, San Francisco CA 94102</span>
+                    <br> Don't like these emails? <a href="http://i.imgur.com/CScmqnj.gif">Unsubscribe</a>.
+                  </td>
+                </tr>
+                <tr>
+                  <td class="content-block powered-by">
+                    Powered by <a href="http://htmlemail.io">HTMLemail</a>.
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <!-- END FOOTER -->
 
-
-
+          </div>
+        </td>
+        <td>&nbsp;</td>
+      </tr>
+    </table>
+  </body>
 </html>
