--- a/app/middleware/mailer-templates/bookingSend.ejs
+++ b/app/middleware/mailer-templates/bookingSend.ejs
@@ -6,28 +6,45 @@
           <td>
             <p>Hi there, <%- name %> </p>
             <p>We have recevied your bookings</p>
-            <p>Please complete your payment</p>
+            <p>Please complete your payment in 24 hours.</p>
             <p></p>
-            <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary";
-            white-space:nowrap;
-            ">
+            <table role="presentation" border="0" cellpadding="0" cellspacing="0">
               <tbody>
+                <p style="font-size: 16px; font-weight: bold;">Departure</p>
+                <p><%= flight1.Airline.name %> </p>
+                <table style="all: unset ">
                   <tr>
                     <td>
-                        <p>Departure</p>
-                        <p><%= flight1.departureTime %></p>
-                        <p><%= flight1.departureAirport.name %></p>
+                      <p><%= flight1.departureDate %> </p>
+                      <p><%= flight1.departureTime %></p>
+                      <p><%= flight1.departureAirport.name %></p>
                     </td>
                     <td>
-                        <p>bca</p>
-                        <p>bca</p>
-                        <p>bca</p>
+                      <p><%= flight1.arrivalDate %> </p>
+                      <p><%= flight1.arrivalTime %></p>
+                      <p><%= flight1.arrivalAirport.name %></p>
                     </td>
                   </tr>
+                </table>
                   <% if (flight2 === 'undefined') { %>
-                    <p>Let me tell you a secret: <b>I am an admin</b></p>
+                    <br>
                 <% } else { %>
-                    
+                  <p style="font-size: 16px; font-weight: bold;">Return</p>
+                  <p><%= flight2.Airline.name %> </p>
+                  <table style="all: unset ">
+                    <tr>
+                      <td>
+                        <p><%= flight2.departureDate %> </p>
+                        <p><%= flight2.departureTime %></p>
+                        <p><%= flight2.departureAirport.name %></p>
+                      </td>
+                      <td>
+                        <p><%= flight2.arrivalDate %> </p>
+                        <p><%= flight2.arrivalTime %></p>
+                        <p><%= flight2.arrivalAirport.name %></p>
+                      </td>
+                    </tr>
+                  </table>
                 <% } %>
 
                 <tr>
@@ -42,8 +59,6 @@
                 </tr>
               </tbody>
             </table>
-            <p>This is a really simple email template. Its sole purpose is to get the recipient to click the button with no distractions.</p>
-            <p>Good luck! Hope it works.</p>
           </td>
         </tr>
       </table>
