email verification update

--- a/app/middleware/mailer-templates/emailConfirmation.ejs
+++ b/app/middleware/mailer-templates/emailConfirmation.ejs
@@ -16,7 +16,7 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr>
-                                      <td> <a href='https://flypass-api.up.railway.app/v1/verify?token=<%- token %>' target="_blank">Verify</a> </td>
+                                      <td> <a href='https://app-flypass.vercel.app/emailverification/<%- token %>' target="_blank">Verify</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
